internal/dataplane/parser/golden/testdata/plugins-with-both-config-and-configfrom/in.yaml
apiVersion: v1
data:
  basic-auth-config: aGlkZV9jcmVkZW50aWFsczogdHJ1ZQ==
  jwt-config: eyJydW5fb25fcHJlZmxpZ2h0IjogZmFsc2V9
kind: Secret
metadata:
  name: conf-secret
  namespace: default
---
  apiVersion: configuration.konghq.com/v1
  config:
    fake: true
  configFrom:
    secretKeyRef:
      key: jwt-config
      name: conf-secret
  kind: KongPlugin
  metadata:
    labels:
      global: "true"
    name: global-foo-plugin
    namespace: default
  plugin: jwt
---
  apiVersion: configuration.konghq.com/v1
  config:
    fake: true
  configFrom:
    secretKeyRef:
      key: jwt-config
      name: conf-secret
  kind: KongPlugin
  metadata:
    name: foo-plugin
    namespace: default
  plugin: jwt
---
  apiVersion: configuration.konghq.com/v1
  config:
    fake: true
  configFrom:
    secretKeyRef:
      key: basic-auth-config
      name: conf-secret
      namespace: default
  kind: KongClusterPlugin
  metadata:
    labels:
      global: "true"
    name: global-bar-plugin
  plugin: basic-auth
  protocols:
    - http
---
  apiVersion: configuration.konghq.com/v1
  config:
    fake: true
  configFrom:
    secretKeyRef:
      key: basic-auth-config
      name: conf-secret
      namespace: default
  kind: KongClusterPlugin
  metadata:
    name: bar-plugin
  plugin: basic-auth
  protocols:
    - http
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      konghq.com/plugins: foo-plugin
      kubernetes.io/ingress.class: kong
    name: foo
    namespace: default
  spec:
    rules:
      - host: example.com
        http:
          paths:
            - backend:
                service:
                  name: foo-svc
                  port:
                    number: 80
              path: /
              pathType: null
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      konghq.com/plugins: bar-plugin
      kubernetes.io/ingress.class: kong
    name: bar
    namespace: default
  spec:
    rules:
      - host: example.net
        http:
          paths:
            - backend:
                service:
                  name: foo-svc
                  port:
                    number: 80
              path: /
              pathType: null
---
  apiVersion: v1
  kind: Service
  metadata:
    name: foo-svc
    namespace: default
  spec: {}
